<resources>
    <string name="app_name">HealthyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_required">Required field!</string>

    <string name="welcome_title">Welcome to Healthy App!</string>
    <string name="welcome_quote">THINK positive, EXERCISE daily, EAT healthy, WORK hard, STAY strong, WORRY less, DANCE more, LOVE often, BE happy!"</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_about_me">About me</string>
    <string name="nav_meals">Meals</string>
    <string name="nav_workouts">Workouts</string>
    <string name="nav_my_favourites">My Favourites</string>
    <string name="nav_snacks">Snacks</string>
    <string name="nav_progress">Progress</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log Out</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>About me</item>
        <item>Meals</item>
        <item>Workouts</item>
        <item>MyFavourites</item>
        <item>Snacks</item>
        <item>Progress</item>
        <item>Settings</item>
        <item>Log out</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_48">48</string>
    <string name="name_text_andreea_apriotese">Andreea Apriotese</string>
    <string name="your_name">Andreea Apriotese</string>
    <string name="full_name">Full Name:</string>
    <string name="andreea_apriotese">Andreea Apriotese</string>
    <string name="andreea_apriotese11_gmail_com">andreea.apriotese11@gmail.com</string>
    <string name="age">Age:</string>
    <string name="_21">21</string>
    <string name="weight">Weight:</string>
    <string name="_48">48</string>
    <string name="height">Height:</string>
    <string name="_161">161</string>
    <string name="gender">Gender:</string>
    <string name="save">Save</string>
    <string name="today_meals">TODAY MEALS</string>
    <string name="_65g">65g</string>
    <string name="_15_min">15 min</string>
    <string name="_163_kcal">163 kcal</string>
    <string name="_120g">120g</string>
    <string name="fibre">Fibre</string>
    <string name="fat">Fat</string>
    <string name="_15g">15g</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="healthy_granola_breakfast">Healthy Granola Breakfast</string>
    <string name="_80g">80g</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="instructions">INSTRUCTIONS</string>

</resources>