<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">

    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/nav_about_me"
        android:title="@string/nav_about_me"
        android:icon="@drawable/ic_baseline_person_24"/>
    <item
        android:id="@+id/nav_favourites"
        android:title="@string/nav_my_favourites"
        android:icon="@drawable/ic_baseline_favorite_24"/>
    <item
        android:id="@+id/nav_meals"
        android:title="@string/nav_meals"
        android:icon="@drawable/ic_baseline_dinner_dining_24"/>
    <item
        android:id="@+id/nav_workouts"
        android:title="@string/nav_workouts"
        android:icon="@drawable/ic_baseline_fitness_center_24"/>
    <item
        android:id="@+id/nav_snacks"
        android:title="@string/nav_snacks"
        android:icon="@drawable/ic_baseline_fastfood_24"/>


    <item
        android:id="@+id/nav_progress"
        android:title="@string/nav_progress"
        android:icon="@drawable/ic_baseline_equalizer_24"/>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"/>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/nav_logout"
        android:icon="@drawable/ic_baseline_logout_24"/>
</group>
</menu>